--- a/projects/package.json
+++ b/projects/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.7.3",
     "axios": "^1.4.0",
@@ -22,7 +23,9 @@
     "react-hook-form": "^7.45.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
-    "redux": "^4.2.1"
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.16",
